improved with custom login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,14 @@
     <title>Login</title>
 </head>
 <body>
-<h1>Hello World</h1>
+<div th:if="${param.error}">Usuário ou senha inválidos</div>
+<div th:if="${param.logout}">Você está desconectado</div>
+
+<form th:action="@{/login}" method="post">
+    <div><label>Username: <input type="text" name="username"></label></div>
+    <div><label>Password: <input type="password" name="password"></label></div>
+    <div><input type="submit" value="Sign in"></div>
+</form>
+
 </body>
 </html>
